<resources>
    <string name="app_name">FileManager</string>

    <string translatable="false" name="app_version">1.0.0</string>

    <string translatable="false" name="app_developer">Nghia</string>

    <string name="action_delete">Delete</string>

    <string name="action_rename">Rename</string>

    <string name="action_search">Search</string>

    <string name="action_copy">Copy</string>

    <string name="action_move">Move</string>

    <string name="action_send">Send</string>

    <string name="action_sort">Sort</string>

    <!--NAVIGATION-->

    <string name="navigation_internal">Internal storage</string>

    <string name="navigation_external">External storage</string>

    <string name="navigation_audio">Music</string>

    <string name="navigation_image">Images</string>

    <string name="navigation_video">Videos</string>

    <string name="navigation_directory_0">DCIM</string>

    <string name="navigation_directory_1">Download</string>

    <string name="navigation_directory_2">Movies</string>

    <string name="navigation_directory_3">Music</string>

    <string name="navigation_directory_4">Pictures</string>

    <string name="navigation_settings">Settings</string>

    <string name="navigation_feedback">Send feedback</string>
</resources>
