<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/navGroup0">

        <item
            android:id="@+id/navItemInternal"
            android:icon="@drawable/ic_internal"
            android:title="@string/navigation_internal" />

        <item
            android:id="@+id/navItemExternal"
            android:icon="@drawable/ic_external"
            android:title="@string/navigation_external"/>

    </group>

    <group
        android:id="@+id/navGroup1">

        <item
            android:id="@+id/navItemImage"
            android:icon="@drawable/ic_library_image"
            android:title="@string/navigation_image" />

        <item
            android:id="@+id/navItemAudio"
            android:icon="@drawable/ic_library_audio"
            android:title="@string/navigation_audio"/>

        <item
            android:id="@+id/navItemVideo"
            android:icon="@drawable/ic_library_video"
            android:title="@string/navigation_video"/>

    </group>

    <group
        android:id="@+id/navGroup2">

        <item
            android:id="@+id/navItemDirectory0"
            android:icon="@drawable/ic_directory"
            android:title="@string/navigation_directory_0" />

        <item
            android:id="@+id/navItemDirectory1"
            android:icon="@drawable/ic_directory"
            android:title="@string/navigation_directory_1" />

        <item
            android:id="@+id/navItemDirectory2"
            android:icon="@drawable/ic_directory"
            android:title="@string/navigation_directory_2" />

        <item
            android:id="@+id/navItemDirectory3"
            android:icon="@drawable/ic_directory"
            android:title="@string/navigation_directory_3" />

        <item
            android:id="@+id/navItemDirectory4"
            android:icon="@drawable/ic_directory"
            android:title="@string/navigation_directory_4" />

    </group>

    <group
        android:id="@+id/navGroup3">

        <item
            android:id="@+id/navItemSettings"
            android:icon="@drawable/ic_settings"
            android:title="@string/navigation_settings" />

        <item
            android:id="@+id/navItemFeedback"
            android:icon="@drawable/ic_feedback"
            android:title="@string/navigation_feedback"/>

    </group>

</menu>